# martech-health-dashboard

./: .dockerignore  .drone.yml  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
drone/: .drone.yml
k8s/base/: configmap.yaml  deployment.yaml  external-secrets.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service-account.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: create_aws_secrets.sh  create_iam_role.sh
src/: config.py
src/api/: app.py
src/cache/: client.py
src/ingestion/: campaign_pipeline.py  pipeline.py
src/search/: client.py
src/transform/: campaign_mart.py  mart.py
src/vault/: models.py  repository.py
tests/unit/: test_campaign_ingestion.py  test_ingestion.py  test_vault_models.py
